# bods-uk-psc-pipeline

./: .env.example  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  env.sh.example  pyproject.toml  requirements.txt
bodsukpscpipeline/: config.py  indexes.py  source.py  transforms.py  utils.py
bodsukpscpipeline/nationalities/: __init__.py  uk_nationality_data.txt
tests/: docker-compose.yml  run_pipeline.py  test_bulk_data.py  test_transforms_bods_0_4.py  test_transforms_updates_es_0_4_real.py  test_transforms_updates_es_0_4_sample.py
tests/fixtures/: basic-company-data-1.csv  company-data-1.json  psc-data-1.json  psc-data-10.json  psc-data-11.json  psc-data-12.json  psc-data-13.json  psc-data-14.json  psc-data-15.json  psc-data-16.json  psc-data-2.json  psc-data-3.json  psc-data-4.json  psc-data-5.json  psc-data-6.json  psc-data-7.json  psc-data-8.json  psc-data-9.json
uk_psc_pipeline/: utils.py
