[project]
name="bodsukpscpipeline"
description = "Pipeline for producing Beneficial Ownership Data Standard (BODS) statements from UK Companies House People with significant control (PSC) data."
version = "0.1"
requires-python = '>=3.10'
dependencies = [
                #"bodspipelines @ git+https://github.com/openownership/bodspipelines.git@bods_0_4_new#egg=bodspipelines",
                "py-i18n-countries",
                "countryguess"]
readme="README.md"
license = {text= "AGPLv3"}
authors = [
  { name = 'Open Ownership', email='code@opendataservices.coop' },
]

[project.urls]
homepage = 'https://github.com/openownership/bods-uk-psc-pipeline'
documentation = 'https://github.com/openownership/bods-uk-psc-pipeline'
repository = 'https://github.com/openownership/bods-uk-psc-pipeline'

[tool.setuptools]
packages = ["bodsukpscpipeline"]
py-modules = ["__init__"]
include-package-data = true

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
